# poof

./: .coderabbit.yaml  .cursorignore  .dockerignore  .editorconfig  .gitignore  .glibc-version  .markdownlint.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  ISSUE_33_EVALUATION.md  README.md  ROADMAP.md  action.yml  build.rs  cliff.toml  codecov.yml  deny.toml  flake.nix  install.sh  justfile  matrix.jsonc  path.sh  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  enhancement.yml  feature_request.yml  security.yml
.github/actions/retrieve-apk-sign-key/: action.yml
.github/workflows/: AUR.yml  apk.yml  asdf_test.yml  ci.yml  ci_action.yml  ci_cross.yml  compliance.yml  coverage.yml  crates.yml  docker.yml  docs.yml  homebrew.yml  licenses.yml  macports.yml  msrv.yml  nix.yml  packages.yml  poof_test.yml  release.yml  release_feature.yml  release_macports.yml  security.yml  test_action.yml  test_asdf.yml  test_brew.yml  test_poof.yml
devcontainer-features/poof/: README.md  devcontainer-feature.json  install.sh
docker/tests/: Dockerfile
examples/: gen_man.rs
hooks/: commit-msg  pre-commit  pre-push
hooks_scripts/: pre-push-tag.sh
macports/: .gitignore  README.md  generate_portfile.sh  macport_pr.sh
nix/: README.md
repo/: .gitignore  README.md  wrangler.toml
repo/apk/: APKBUILD.template  Dockerfile  README.md  apk_matrix.jsonc  entrypoint.sh
repo/aur/: README.md
repo/homebrew/: README.md
repo/index/: README.md  deploy.sh  readme2index.sh
repo/worker/: README.md  deploy.sh
repo/worker/src/: index.js
scripts/: bin-inspect.sh
scripts/asset_downloader/: download_asset.sh  write_to_clipboard.sh  write_to_ron_files.sh
scripts/aur-packaging/: .gitignore  PKGBUILD.jinja  README.md  requirements.txt  update.py
scripts/brew/: README.md  poof.rb.j2
scripts/migrations/pre-0.5.0/: migrate_poof_data.sh
scripts/tools/: .gitignore  list.txt.sample  populate_output.sh  write_to_clipboard.sh  write_to_ron_files.sh
src/: archives.rs  asset.rs  cli.rs  constants.rs  datadirs.rs  filesys.rs  lib.rs  main.rs  output.rs  platform_info.rs  selector.rs  semver_utils.rs  utils.rs
src/commands/: check.rs  clean.rs  completions.rs  download.rs  enable.rs  info.rs  init.rs  install.rs  list.rs  make_default.rs  mod.rs  uninstall.rs  unlink.rs  update.rs  what.rs  which.rs
src/commands/download/: tests.rs
src/commands/install/: tests.rs
src/commands/tests/: install_tests.rs  mod.rs
src/commands/update/: tests.rs
src/core/: archives.rs  filesys.rs  mod.rs  musl.rs  platform_info.rs  selector.rs
src/core/selector/tests/: assets.rs  incompatible.rs  mod.rs  selector_tests.rs  test_assets.rs
src/core/tests/: responses.json  selector_tests.rs  test_db.csv
src/core/tests/assets/: ClementTsang@bottom.ron  ahmetb@kubectx.ron  bootandy@dust.ron  dalance@procs.ron  dandavison@delta.ron  extrawurst@gitui.ron  eza-community@eza.ron  gokcehan@lf.ron  hatoo@oha.ron  helix-editor@helix.ron  karol-broda@snitch.ron  lsd-rs@lsd.ron  mr-karan@doggo.ron  pirafrank@rust@exif@renamer.ron  pirafrank@vault-conductor.ron  sondr3@git-ignore.ron  stern@stern.ron
src/files/: archives.rs  datadirs.rs  filesys.rs  magic.rs  mod.rs  utils.rs
src/files/archives/tests/: common.rs  extract_to_dir.rs  mod.rs  test_validate_magic_bytes.rs  validate_magic_bytes.rs
src/files/filesys/: tests.rs
src/files/magic/: tests.rs
src/files/utils/tests/: clean_up_filename_test.rs  find_similar_repos.rs  get_file_extension.rs  get_file_name.rs  mod.rs  test_clean_up_filename.rs  test_contains_alias_token.rs  test_get_file_extension.rs  (+4 more)
src/github/: client.rs  mod.rs
src/github/client/: tests.rs
src/github/models/: mod.rs  release.rs  release_asset.rs
src/models/: asset.rs  asset_triple.rs  binary.rs  binary_container.rs  mod.rs  repostring.rs  slug.rs  spell.rs  supported_shells.rs
src/utils/: installation.rs  mod.rs  semver.rs  string.rs
test/: README.md
test/poof/: test.sh
tests/: README.md  clap.rs  info.rs  integration.rs  unit.rs  version.rs
tests/common/: helpers.rs  mod.rs  repo_format_validation.rs
tests/common/fixtures/: README.md  mock_github.rs  mod.rs  test_env.rs
tests/common/mocks/: archive.rs
tests/fixtures/archives/: .gitignore  archive.7z  archive.tar  archive.tar.xz  archive.tbz2  archive.tgz  archive.tzst  file.txt.bz2  file.txt.xz  file.txt.zst
tests/integration/: check.rs  download.rs  enable.rs  error_handling.rs  info.rs  install.rs  list.rs  make_default.rs  mod.rs  update.rs  use.rs
tests/integration/command_handling/: claps.rs  verbose_flags.rs
tests/integration/commands/: check.rs  clean.rs  completions.rs  download.rs  enable.rs  help.rs  info.rs  init.rs  install.rs  list.rs  uninstall.rs  unlink.rs  update.rs  use.rs  version.rs  what.rs  which.rs
tests/integration/common/: test_common.rs
tests/unit/: check.rs  clap.rs  error_handling.rs  github_client.rs  help.rs  info.rs  mod.rs  version.rs
tests/unit/files/: mod.rs
(+31 files in other folders)
