[package]
name = "poof"
authors = ["Francesco Pira (pirafrank)"]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/pirafrank/poof"
documentation = "https://github.com/pirafrank/poof/blob/main/README.md"
description = "Easy to use zero-config, zero-install, zero-dependencies manager of pre-built software that works like magic"
license = "MIT"
readme = "README.md"
rust-version = "1.85.0"
build = "build.rs"
keywords = ["binary-manager", "portable-tools", "zero-config", "no-install", "userspace"]
homepage = "https://github.com/pirafrank/poof"
categories = ["command-line-utilities"]
exclude = [
    ".git",
    ".github",
    "hooks",
    ".idea",
    ".vscode",
    ".DS_Store",
    "*.iml",
    "*.swp",
    "*.swo",
    "*.tmp",
    "*.log",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
errno = "0.3"
lazy_static = "1.5.0"
libc = "0.2"
reqwest = { version = "0.12.20", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
zip = "3.0"
tar = "0.4"
flate2 = "1.1"
xz2 = "0.1"
bzip2 = "0.5"
sevenz-rust2 = { version = "0.16.0" }
log = "0.4.27"
env_logger = "0.11.8"
clap-verbosity-flag = "3.0.3"
regex = "1.11.1"
rayon = "1.10.0"
semver = "1.0.26"
anyhow = "1.0"
self_update = { version = "0.42.0", default-features = false, features = ["rustls"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[build-dependencies]
build_cfg = "1.1.0"
chrono = "0.4"
glibc_version = "0.1.2"
