[package]
name = "poof"
authors = ["Francesco Pira (pirafrank)"]
version = "0.6.0"
edition = "2021"
repository = "https://github.com/pirafrank/poof"
documentation = "https://github.com/pirafrank/poof/blob/main/README.md"
description = "Easy to use zero-config, zero-install, zero-dependencies manager of pre-built software that works like magic"
license = "MIT"
readme = "README.md"
rust-version = "1.85.0"
build = "build.rs"
keywords = ["binary-manager", "portable-tools", "zero-config", "no-install", "userspace"]
homepage = "https://github.com/pirafrank/poof"
categories = ["command-line-utilities"]
exclude = [
    ".git",
    ".github",
    "hooks",
    ".idea",
    ".vscode",
    ".DS_Store",
    "*.iml",
    "*.swp",
    "*.swo",
    "*.tmp",
    "*.log",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
dirs = "6.0"
errno = "0.3"
lazy_static = "1.5.0"
libc = "0.2"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
zip = { version = "7.0", features = ["deflate", "deflate64", "lzma", "ppmd", "bzip2"] }
tar = "0.4"
flate2 = "1.1"
xz2 = "0.1"
bzip2 = "0.6"
sevenz-rust2 = { version = "0.20" }
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11.1"
rayon = "1.11.0"
semver = "1.0.26"
anyhow = "1.0"
which = "8.0.0"

[dev-dependencies]
clap_mangen = "0.2.31"
tempfile = "3"
serial_test = "3"
predicates = "3.1.3"
assert_cmd = "2.1.2"
serde_json = "1.0"
temp-env = "0.3"
mockito = "1.7"
ron = "0.12"

[build-dependencies]
build_cfg = "1.1.0"
chrono = "0.4"
clap_mangen = "0.2.31"
glibc_version = "0.1.2"
