[package]
name = "poof"
authors = ["Francesco Pira (pirafrank)"]
version = "0.6.1"
edition = "2021"
repository = "https://github.com/pirafrank/poof"
documentation = "https://github.com/pirafrank/poof/blob/main/README.md"
description = "Easy to use zero-config, zero-install, zero-dependencies manager of pre-built software that works like magic"
license = "MIT"
readme = "README.md"
rust-version = "1.88"
build = "build.rs"
keywords = ["binary-manager", "portable-tools", "zero-config", "no-install", "userspace"]
homepage = "https://github.com/pirafrank/poof"
categories = ["command-line-utilities"]
exclude = [
    ".git",
    ".github",
    "hooks",
    ".idea",
    ".vscode",
    ".DS_Store",
    "*.iml",
    "*.swp",
    "*.swo",
    "*.tmp",
    "*.log",
]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_complete_nushell = "4.6"
dirs = "6.0"
errno = "0.3"
lazy_static = "1.5.0"
libc = "0.2"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
zip = { version = "8.6", features = ["deflate", "deflate64", "lzma", "ppmd", "bzip2"] }
tar = "0.4"
flate2 = "1.1"
xz2 = "0.1"
bzip2 = "0.6"
sevenz-rust2 = { version = "0.20" }
log = "0.4.27"
env_logger = "0.11.10"
regex = "1.11.1"
rayon = "1.12.0"
semver = "1.0.28"
anyhow = "1.0"
which = "8.0.2"
zstd = "0.13.3"

[dev-dependencies]
clap_mangen = "0.3.0"
tempfile = "3"
serial_test = "3"
predicates = "3.1.4"
assert_cmd = "2.2.2"
serde_json = "1.0"
temp-env = "0.3"
mockito = "1.7"
ron = "0.12"

[build-dependencies]
build_cfg = "1.1.0"
chrono = "0.4"
clap_mangen = "0.3.0"
glibc_version = "0.1.2"
